Fix svg:script and only flag inline scripts as executed once they contain non-empty script content. b=359598 r/sr=bz